--- a/.github/workflows/sanityBackup.yml
+++ b/.github/workflows/sanityBackup.yml
@@ -2,6 +2,7 @@ name: Sanity Backup
 on:
   schedule:
     - cron: '*/5 * * * *'
+jobs:
   backup-dataset:
     runs-on: ubuntu-18.04
     name: Backup dataset
