--- a/.github/workflows/SanityDatasetBackup.yml
+++ b/.github/workflows/SanityDatasetBackup.yml
@@ -1,7 +1,8 @@
 name: Sanity Dataset Backup
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    # Run every 5 days at 07.00 GMT
+    - cron: '0 7 */5 * *'
 jobs:
   backup-dataset:
     runs-on: self-hosted
