--- a/.github/workflows/SanityDatasetBackup.yml
+++ b/.github/workflows/SanityDatasetBackup.yml
@@ -2,10 +2,11 @@ name: Sanity Dataset Backup
 on:
   schedule:
     # Run every 5 days at 07.00 GMT
-    - cron: '0 7 */5 * *'
+    # - cron: '0 7 */5 * *'
+    - cron: '*/10 * * * *'
 jobs:
   backup-dataset:
-    runs-on: self-hosted
+    runs-on: ubuntu-18.04
     name: Backup dataset
     steps:
       - uses: actions/checkout@v2
