--- a/.github/workflows/SanityDatasetBackup.yml
+++ b/.github/workflows/SanityDatasetBackup.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: pnpm install
       - name: Export dataset
         uses: sanity-io/github-action-sanity@v0.3
         env:
