--- a/.github/workflows/SanityDatasetBackup.yml
+++ b/.github/workflows/SanityDatasetBackup.yml
@@ -17,9 +17,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'pnpm'
       - name: Install Dependencies
-        run: pnpm install
+        run: yarn install
       - name: Export dataset
         uses: sanity-io/github-action-sanity@v0.4
         env:
