--- a/.github/workflows/SanityDatasetBackup.yml
+++ b/.github/workflows/SanityDatasetBackup.yml
@@ -3,7 +3,8 @@ on:
   schedule:
     # Run every 5 days at 07.00 GMT
     # - cron: '0 7 */5 * *'
-    - cron: '*/10 * * * *'
+    # Run every 10 minutes every 4 hours
+    - cron: '*/10 */4 * * *'
 jobs:
   backup-dataset:
     runs-on: ubuntu-latest
