--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-plugin-svelte": "^2.32.4",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.233.0",
+		"photoswipe": "^5.3.8",
 		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
 		"postcss-nesting": "^11.3.0",
