--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@fontsource/fira-sans-condensed": "^5.0.5",
 		"@phosphor-icons/react": "^2.0.10",
 		"@playwright/test": "^1.36.1",
+		"@portabletext/svelte": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/kit": "^1.22.3",
 		"@tailwindcss/forms": "^0.5.4",
