--- a/.github/workflows/SanityDatasetBackup.yml
+++ b/.github/workflows/SanityDatasetBackup.yml
@@ -3,8 +3,8 @@ on:
   schedule:
     # Run every 5 days at 07.00 GMT
     # - cron: '0 7 */5 * *'
-    # Run every 10 minutes every 4 hours
-    - cron: '*/10 */4 * * *'
+    # Run at 5 past 10 every friday
+    - cron: '5 10 * * 5'
 jobs:
   backup-dataset:
     runs-on: ubuntu-latest
