--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"@fontsource-variable/playfair-display": "^5.0.6",
 		"@fontsource/fira-sans-condensed": "^5.0.5",
 		"@phosphor-icons/react": "^2.0.10",
-		"@playwright/test": "^1.36.1",
+		"@playwright/test": "^1.36.2",
 		"@portabletext/svelte": "^2.0.0",
-		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.22.3",
 		"@tailwindcss/forms": "^0.5.4",
 		"@tailwindcss/typography": "^0.5.9",
@@ -45,7 +45,7 @@
 		"svelte-preprocess": "^5.0.4",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.1.6",
-		"vite": "^4.4.6",
+		"vite": "^4.4.7",
 		"vitest": "^0.25.8",
 		"zod": "^3.21.4"
 	},
@@ -60,8 +60,8 @@
 		"@sanity/ui": "^0.37.22",
 		"@sanity/vision": "^3.14.3",
 		"@sanity/webhook": "^2.0.0",
-		"@types/node": "^18.16.20",
-		"@types/react": "^18.2.15",
+		"@types/node": "^18.17.0",
+		"@types/react": "^18.2.16",
 		"@types/react-dom": "^18.2.7",
 		"groq": "^2.33.2",
 		"react": "^18.2.0",
