--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "heryanora.com",
 	"version": "0.0.1",
 	"private": true,
+	"engines": {
+		"node": ">=20.0.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -14,62 +17,63 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@fontsource-variable/playfair-display": "^5.0.6",
-		"@fontsource/fira-sans-condensed": "^5.0.5",
-		"@phosphor-icons/react": "^2.0.10",
-		"@playwright/test": "^1.36.2",
-		"@portabletext/svelte": "^2.0.0",
-		"@sveltejs/adapter-vercel": "^2.4.3",
-		"@sveltejs/kit": "^1.22.3",
-		"@tailwindcss/forms": "^0.5.4",
-		"@tailwindcss/typography": "^0.5.9",
-		"autoprefixer": "^10.4.14",
-		"classnames": "^2.3.2",
-		"eslint": "^8.45.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.32.4",
+		"@fontsource-variable/playfair-display": "^5.2.8",
+		"@fontsource/fira-sans-condensed": "^5.2.7",
+		"@phosphor-icons/react": "^2.1.10",
+		"@playwright/test": "^1.56.1",
+		"@portabletext/svelte": "^2.1.12",
+		"@sveltejs/adapter-vercel": "^5.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.19",
+		"autoprefixer": "^10.4.22",
+		"classnames": "^2.5.1",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^8.10.2",
+		"eslint-plugin-svelte": "^2.46.1",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.233.0",
-		"photoswipe": "^5.3.8",
-		"postcss": "^8.4.27",
-		"postcss-load-config": "^4.0.1",
+		"photoswipe": "^5.4.4",
+		"postcss": "^8.5.6",
+		"postcss-load-config": "^4.0.2",
 		"postcss-nesting": "^11.3.0",
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"sanity-plugin-availability": "^1.0.1",
 		"sanity-plugin-note-field": "^2.0.2",
-		"svelte": "^3.59.2",
-		"svelte-check": "^3.4.6",
-		"svelte-legos": "^0.2.1",
-		"svelte-preprocess": "^5.0.4",
-		"tailwindcss": "^3.3.3",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.7",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.8.6",
+		"svelte-legos": "^0.2.5",
+		"svelte-preprocess": "^5.1.4",
+		"tailwindcss": "^3.4.18",
+		"typescript": "^5.9.3",
+		"vite": "^5.0.0",
 		"vitest": "^0.25.8",
-		"zod": "^3.21.4"
+		"zod": "^3.25.76"
 	},
 	"dependencies": {
-		"@sanity/client": "^3.4.1",
-		"@sanity/code-input": "^4.1.1",
-		"@sanity/color": "^2.2.5",
-		"@sanity/color-input": "^3.1.0",
-		"@sanity/google-maps-input": "^3.0.1",
+		"@sanity/client": "^6.0.0",
+		"@sanity/code-input": "^4.1.4",
+		"@sanity/color": "^3.0.0",
+		"@sanity/color-input": "^4.0.0",
+		"@sanity/google-maps-input": "^4.0.0",
 		"@sanity/groq-store": "^1.1.5",
-		"@sanity/image-url": "^1.0.2",
-		"@sanity/ui": "^0.37.22",
-		"@sanity/vision": "^3.14.3",
+		"@sanity/image-url": "^1.2.0",
+		"@sanity/ui": "^2.0.0",
+		"@sanity/vision": "^3.99.0",
 		"@sanity/webhook": "^2.0.0",
-		"@types/node": "^18.17.0",
-		"@types/react": "^18.2.16",
-		"@types/react-dom": "^18.2.7",
-		"groq": "^2.33.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-is": "^18.2.0",
-		"sanity": "^3.14.3",
-		"sanity-plugin-asset-source-unsplash": "^1.1.0",
-		"sanity-plugin-media": "^2.2.1"
+		"styled-components": "^6.1.0",
+		"@types/node": "^20.0.0",
+		"@types/react": "^18.3.26",
+		"@types/react-dom": "^18.3.7",
+		"groq": "^2.36.6",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-is": "^18.3.1",
+		"sanity": "^3.99.0",
+		"sanity-plugin-asset-source-unsplash": "^1.1.2",
+		"sanity-plugin-media": "^2.4.2"
 	},
 	"type": "module"
 }
