--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@portabletext/svelte": "^2.1.12",
 		"@sveltejs/adapter-vercel": "^5.0.0",
 		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"autoprefixer": "^10.4.22",
@@ -63,7 +64,6 @@
 		"@sanity/ui": "^2.0.0",
 		"@sanity/vision": "^3.99.0",
 		"@sanity/webhook": "^2.0.0",
-		"styled-components": "^6.1.0",
 		"@types/node": "^20.0.0",
 		"@types/react": "^18.3.26",
 		"@types/react-dom": "^18.3.7",
@@ -73,7 +73,8 @@
 		"react-is": "^18.3.1",
 		"sanity": "^3.99.0",
 		"sanity-plugin-asset-source-unsplash": "^1.1.2",
-		"sanity-plugin-media": "^2.4.2"
+		"sanity-plugin-media": "^2.4.2",
+		"styled-components": "^6.1.0"
 	},
 	"type": "module"
 }
