--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
 		"svelte-preprocess": "^5.1.4",
 		"tailwindcss": "^3.4.18",
 		"typescript": "^5.9.3",
-		"vite": "^5.0.0",
-		"vitest": "^0.25.8",
+		"vite": "^5.4.0",
+		"vitest": "^1.0.0",
 		"zod": "^3.25.76"
 	},
 	"dependencies": {
@@ -75,6 +75,11 @@
 		"sanity-plugin-asset-source-unsplash": "^1.1.2",
 		"sanity-plugin-media": "^2.4.2",
 		"styled-components": "^6.1.0"
+	},
+	"pnpm": {
+		"overrides": {
+			"vite": "^5.4.21"
+		}
 	},
 	"type": "module"
 }
